package compliant.payroll;

public interface ITaxCalculator {
    double calculateTax(double income);
}
