package compliant.payroll;

public interface ISalaryCalculator {
    public double calculateSalary(AbstrEmployee employee);
}
