' Generated by UML Generator
' Encoded: vLTTRzCm57tFh_1Z1qqLMf1G9QOLreb8AqoqBmWXv3gtdOMJL8w325lvxTZvQEEFj6YWJTFUukkJSuxllOrlppA1kSXZvcNVQRB17CU8C9nb4o4uNUO2Gf8cS_eBKE1TqmWGePmmyBmIXIPPbXAA1LpnT7M1YKXvWMuyX9uJ3Z8yZJSiBG1wK3x4a8Xp6HwZovHWfXxxACjvWcCPcql9PDr7-ef6OqGJSJ96asKcUCFeRHiF5pbZ3oZ_7d3qSNKECdb22Tox3Ha6li84KFWECv8pBFKTBlQRFKaJpZ73lDW73Qf6uO6oUeKBdZ8smmbU0w_KRsIp2agsACOqwM6-pXh2Brybqu-KHdi2ytXtImXMxkIRg6xtjjcIok_CWTeqig12vhhEX7eK-ETUNHfQjDSAu2llceT_Bq4V7PGzKP9hADcdEosLh_P15M9UoQcjtUbK_8Ch64OgL9rRhT_Y3AhygtYKvalMy7u6pBDPpWJTC0hSsgzUcwnavqhdlJXDn3KhgcW3tR-pTNwvG2xg9hFZzvRZEoNXm84qaQfRTp-XJvF5zDkBXWMzGS5WEB8HGmqnSY166kAbZhWCP-52anc-3eB0WMaBlGfgJDdlf3u2gEeMCW-i21EIgZHt5hUv4bfrrKAFfAIQvwTRJVE6hGfgHXz9JKtRJx6ihJ73l7Jh-xcXg_CCzNLdZ0jTf7PEVsi6wR6E-t-kd0FoO71xQarONT1JOqGonrqtcOqoURhcLZTVDzhaTGoX2cIFLzQ8QNDr3N6LHoj-0Eyoe4zpptpV7BaSCuBltvec7QXIxnYNtgNLaVHtz6lC8Qq37Ae7RX2NeFMbTMXQ68ViuO-SIzd-41plXfh8gkjVK9r14ib_lNy0
' URL: http://www.plantuml.com/plantuml/uml/vLTTRzCm57tFh_1Z1qqLMf1G9QOLreb8AqoqBmWXv3gtdOMJL8w325lvxTZvQEEFj6YWJTFUukkJSuxllOrlppA1kSXZvcNVQRB17CU8C9nb4o4uNUO2Gf8cS_eBKE1TqmWGePmmyBmIXIPPbXAA1LpnT7M1YKXvWMuyX9uJ3Z8yZJSiBG1wK3x4a8Xp6HwZovHWfXxxACjvWcCPcql9PDr7-ef6OqGJSJ96asKcUCFeRHiF5pbZ3oZ_7d3qSNKECdb22Tox3Ha6li84KFWECv8pBFKTBlQRFKaJpZ73lDW73Qf6uO6oUeKBdZ8smmbU0w_KRsIp2agsACOqwM6-pXh2Brybqu-KHdi2ytXtImXMxkIRg6xtjjcIok_CWTeqig12vhhEX7eK-ETUNHfQjDSAu2llceT_Bq4V7PGzKP9hADcdEosLh_P15M9UoQcjtUbK_8Ch64OgL9rRhT_Y3AhygtYKvalMy7u6pBDPpWJTC0hSsgzUcwnavqhdlJXDn3KhgcW3tR-pTNwvG2xg9hFZzvRZEoNXm84qaQfRTp-XJvF5zDkBXWMzGS5WEB8HGmqnSY166kAbZhWCP-52anc-3eB0WMaBlGfgJDdlf3u2gEeMCW-i21EIgZHt5hUv4bfrrKAFfAIQvwTRJVE6hGfgHXz9JKtRJx6ihJ73l7Jh-xcXg_CCzNLdZ0jTf7PEVsi6wR6E-t-kd0FoO71xQarONT1JOqGonrqtcOqoURhcLZTVDzhaTGoX2cIFLzQ8QNDr3N6LHoj-0Eyoe4zpptpV7BaSCuBltvec7QXIxnYNtgNLaVHtz6lC8Qq37Ae7RX2NeFMbTMXQ68ViuO-SIzd-41plXfh8gkjVK9r14ib_lNy0
' Generated on: 2026-03-21T20:23:30.909445200

@startuml
skinparam classAttributeIconSize 0
hide circle

class AssociateProfFactory {
  +createEmployee(employmentDate: LocalDate, surname: String, name: String, id: int): AbstrEmployee
}

class FullProfFactory {
  +createEmployee(employmentDate: LocalDate, surname: String, name: String, id: int): AbstrEmployee
}

class HeadOfDepartmentFactory {
  +createEmployee(employmentDate: LocalDate, surname: String, name: String, id: int): AbstrEmployee
}

interface ICalculatorFactory {
  +createCalculator(): ISalaryCalculator
}

interface IEmployeeFactory {
  +createEmployee(employmentDate: LocalDate, surname: String, name: String, id: int): AbstrEmployee
}

class PayrollManager {
  +{static} main(args: String[]): void
}

class SalaryCalculatorFactory {
  +createCalculator(): ISalaryCalculator
}

abstract class AbstrEmployee {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -taxCalculator: ITaxCalculator
  --
  +AbstrEmployee(employmentDate: LocalDate, surname: String, name: String, id: int, taxCalculator: ITaxCalculator)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getName(): String
  +getId(): int
  +getBaseSalary(): double
  +getYearsMultiplier(): double
  +getSalaryAfterTax(monthlySalary: double): double
}

class AssociateProfessor {
  +AssociateProfessor(employmentDate: LocalDate, surname: String, name: String, id: int, taxCalculator: ITaxCalculator)
  +getBaseSalary(): double
  +getYearsMultiplier(): double
}

class AssociateProfessorTaxCalculator {
  -{static} RATE_1: double = 0.23
  -{static} RATE_2: double = 0.33
  -{static} RATE_3: double = 0.43
  -{static} LIMIT_1: double = 28000
  -{static} LIMIT_2: double = 50000
  --
  +calculateTax(yearlyIncome: double): double
}

class FullProfessor {
  +FullProfessor(employmentDate: LocalDate, surname: String, name: String, id: int, taxCalculator: ITaxCalculator)
  +getBaseSalary(): double
  +getYearsMultiplier(): double
}

class FullProfessorTaxCalculator {
  -{static} RATE_1: double = 0.23
  -{static} RATE_2: double = 0.33
  -{static} RATE_3: double = 0.43
  -{static} LIMIT_1: double = 28000
  -{static} LIMIT_2: double = 50000
  --
  +calculateTax(yearlyIncome: double): double
}

class HeadOfDepartment {
  +HeadOfDepartment(employmentDate: LocalDate, surname: String, name: String, id: int, taxCalculator: ITaxCalculator)
  +getBaseSalary(): double
  +getYearsMultiplier(): double
}

class HeadOfDepartmentTaxCalculator {
  -{static} RATE_1: double = 0.23
  -{static} RATE_2: double = 0.33
  -{static} RATE_3: double = 0.43
  -{static} LIMIT_1: double = 28000
  -{static} LIMIT_2: double = 50000
  --
  +calculateTax(yearlyIncome: double): double
}

interface ISalaryCalculator {
  +calculateSalary(employee: AbstrEmployee): double
}

interface ITaxCalculator {
  ~calculateTax(income: double): double
}

class SalaryCalculator {
  +calculateSalary(employee: AbstrEmployee): double
}

AssociateProfFactory ..|> IEmployeeFactory
AssociateProfFactory ..> AbstrEmployee
FullProfFactory ..|> IEmployeeFactory
FullProfFactory ..> AbstrEmployee
HeadOfDepartmentFactory ..|> IEmployeeFactory
HeadOfDepartmentFactory ..> AbstrEmployee
ICalculatorFactory ..> ISalaryCalculator
IEmployeeFactory ..> AbstrEmployee
SalaryCalculatorFactory ..|> ICalculatorFactory
SalaryCalculatorFactory ..> ISalaryCalculator
AbstrEmployee *-- ITaxCalculator
AssociateProfessor --|> AbstrEmployee
AssociateProfessor ..> ITaxCalculator
AssociateProfessorTaxCalculator ..|> ITaxCalculator
FullProfessor --|> AbstrEmployee
FullProfessor ..> ITaxCalculator
FullProfessorTaxCalculator ..|> ITaxCalculator
HeadOfDepartment --|> AbstrEmployee
HeadOfDepartment ..> ITaxCalculator
HeadOfDepartmentTaxCalculator ..|> ITaxCalculator
ISalaryCalculator ..> AbstrEmployee
SalaryCalculator ..|> ISalaryCalculator
SalaryCalculator ..> AbstrEmployee
@enduml